# cxline

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
config/: default.toml
src/: config.rs  formatter.rs  main.rs  parser.rs  style.rs  theme.rs  watcher.rs
src/modules/: cost.rs  cwd.rs  git.rs  mod.rs  model.rs  permission.rs  timer.rs  tokens.rs  turns.rs
tests/: integration.rs
tests/fixtures/: sample_codex.jsonl  sample_input.json
