[package]
name = "cxline"
version = "0.1.0"
edition = "2021"
authors = ["shilinghan"]
description = "A lightweight, blazing-fast status bar for OpenAI Codex CLI"
license = "MIT"
repository = "https://github.com/Subaru486desuwa/cxline"
keywords = ["codex", "cli", "statusbar", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
terminal_size = "0.4"
dirs = "6"
notify = "7"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
